<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_dialog_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:paddingStart="@dimen/_8sdp"
    android:paddingEnd="@dimen/_8sdp"
    android:paddingBottom="@dimen/_16sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dialog_bg_color"
            android:orientation="vertical">



            <TextView
                android:id="@+id/tv_gallery"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:background="@drawable/bottom_border_gray"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/txt_select_from_gallery"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/tv_camera"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/txt_select_from_camera"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_cancel_dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded_corner_white"
        android:text="@string/txt_cancel"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>