<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:background="?attr/colorPrimary"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:theme="@style/AppBarOverlay">

                    <FrameLayout
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:id="@+id/ll_back"
                            android:layout_width="@dimen/_25sdp"
                            android:gravity="center"
                            android:backgroundTint="#ffffff"
                            android:orientation="horizontal"
                            android:background="@drawable/search_icon_background"
                            android:layout_height="@dimen/_25sdp">
                            <ImageView
                                android:layout_width="@dimen/_14sdp"
                                android:src="@drawable/ic_back_new"
                                android:layout_height="@dimen/_14sdp">
                            </ImageView>


                        </LinearLayout>
                        <TextView
                            android:id="@+id/tv_activity_name"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Change Password"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_15sdp"
                            android:textStyle="bold" />
                    </FrameLayout>
                </androidx.appcompat.widget.Toolbar>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:padding="@dimen/_10sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:background="@drawable/edittext_background"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:padding="@dimen/_8sdp"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edt_old_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@android:color/transparent"
                                android:hint="@string/old_password"
                                android:imeOptions="actionNext"
                                android:inputType="textPassword"
                                android:textColor="@color/black"
                                android:textColorHint="#828282"
                                android:textSize="@dimen/_12sdp" />

                            <!-- Password Label -->
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:background="@drawable/edittext_background"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:padding="@dimen/_8sdp"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edt_new_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@android:color/transparent"

                                android:hint="@string/new_password"
                                android:imeOptions="actionNext"
                                android:inputType="textPassword"
                                android:textColor="@color/black"
                                android:textColorHint="#828282"
                                android:textSize="@dimen/_12sdp" />

                            <!-- Password Label -->
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:background="@drawable/edittext_background"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:padding="@dimen/_8sdp"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edt_confirm_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@android:color/transparent"

                                android:hint="@string/condirm_password"
                                android:imeOptions="actionDone"
                                android:inputType="textPassword"
                                android:textColor="@color/black"
                                android:textColorHint="#828282"
                                android:textSize="@dimen/_12sdp" />

                            <!-- Password Label -->
                        </LinearLayout>




                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintTextAppearance="@style/TextLabel">

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintTextAppearance="@style/TextLabel">

                        </com.google.android.material.textfield.TextInputLayout>

                        <CheckBox
                            android:id="@+id/checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:textSize="@dimen/_12sdp"
                            android:text="Change password on next login" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_submit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/_15sdp"
                            android:layout_marginTop="@dimen/_16sdp"
                            android:background="@drawable/edittext_background_primary"
                            android:padding="@dimen/_8sdp"
                            android:text="Submit"
                            android:textColor="@color/WhiteSmoke"
                            android:textSize="@dimen/_12sdp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:padding="@dimen/_2sdp"

                        android:id="@+id/txt_val_one_letter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="@dimen/_6sdp"
                        android:text="@string/password_validation_1"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:padding="@dimen/_2sdp"

                        android:id="@+id/txt_val_two_letter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:lineSpacingExtra="@dimen/_6sdp"
                        android:text="@string/password_validation_2"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:padding="@dimen/_2sdp"

                        android:id="@+id/txt_val_three_letter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:lineSpacingExtra="@dimen/_6sdp"
                        android:text="@string/password_validation_3"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/txt_val_four_letter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:lineSpacingExtra="@dimen/_6sdp"
                        android:padding="@dimen/_2sdp"
                        android:text="@string/password_validation_4"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</layout>
